@@ -15,11 +15,52 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+      	<groupId>info.cukes</groupId>
+      	<artifactId>cucumber-java</artifactId>
+      	<scope>test</scope>
+      	<version>1.2.4</version>
+      </dependency>
+      <dependency>
+      	<groupId>info.cukes</groupId>
+      	<artifactId>cucumber-junit</artifactId>
+      	<version>1.2.4</version>
+      	<scope>test</scope>
+      </dependency>
+      <dependency>
+      	<groupId>org.seleniumhq.selenium</groupId>
+      	<artifactId>selenium-java</artifactId>
+      	<version>2.48.1</version>
+      	<scope>test</scope>
+      </dependency>
+      <dependency>
+      	<groupId>io.ddavison</groupId>
+     	 	<artifactId>conductor</artifactId>
+      	<version>2.0.3</version>
+  	</dependency>
+    </dependencies>
+    <build>
+    	<plugins>
+    		<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+    			<version>2.12.2</version>
+    			<configuration>
+    			<argLine>-Duser.language=en</argLine>
+    			<argLine>-Xmx1024m</argLine>
+    			<argLine>-XX:MaxPermSize=256m</argLine>
+    			<argLine>-Dfile.encoding=UTF-8</argLine>
+    			<useFile>false</useFile>
+    			</configuration>
+    		</plugin>
+    	</plugins>
+    </build>
+
+
 </project>
